<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">android-domotique</string>
  <!-- Fragments et onglets -->
  <string name="config_titre">[Config]</string>
  <string name="blink_titre">[Blink]</string>
  <string name="pinread_titre">[PinRead]</string>
  <string name="pinwrite_titre">[PinWrite]</string>
  <string name="commands_titre">[Commands]</string>
  <!-- Config -->
  <string name="txt_TitreConfig">Se connecter au serveur</string>
  <string name="txt_UrlServiceRest">Url du service web / jSON</string>
  <string name="txt_MsgErreurUrlServiceRest">L\'Url du service doit être entrée sous la
    forme Ip1.Ip2.Ip3.IP4:Port/contexte</string>
  <string name="hint_UrlServiceRest">ex (192.168.1.120:8080/rest)</string>
  <string name="btn_annuler">Annuler</string>
  <string name="btn_rafraichir">Rafraîchir</string>
  <string name="titre_list_arduinos">Liste des Arduinos connectés</string>
  <string name="dummy">XXXXX</string>
  <!-- listarduinos_item -->
  <string name="txt_arduino_id">Id : </string>
  <string name="txt_arduino_description">Description : </string>
  <!-- Blink -->
  <string name="titre_Blink">Faire Clignote une Led</string>
  <string name="Commande">Commande</string>
  <string name="txt_inputcligno1">entre 1 et 100 </string>
  <string name="txt_inputcligno2">entre 100 et 2000 </string>
  <string name="titre_Blink_Button">Exécuter</string>
  <string name="titre_Reponse">Reponse des Arduinos</string>
</resources>