<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/RelativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/wheat"
                android:orientation="vertical" >
  <CheckBox
    android:id="@+id/checkBoxArduino"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/txt_arduino_description" />
  <TextView
    android:id="@+id/TextView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/checkBoxArduino"
    android:layout_marginLeft="40dp"
    android:text="@string/txt_arduino_id" />
  <TextView
    android:id="@+id/txt_arduino_id"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/checkBoxArduino"
    android:layout_alignParentTop="true"
    android:layout_toRightOf="@+id/TextView1"
    android:text="@string/dummy"
    android:textColor="@color/blue" />
  <TextView
    android:id="@+id/TextView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/checkBoxArduino"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="20dp"
    android:layout_toRightOf="@+id/txt_arduino_id"
    android:text="@string/txt_arduino_description" />
  <TextView
    android:id="@+id/txt_arduino_description"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@+id/checkBoxArduino"
    android:layout_alignTop="@+id/TextView2"
    android:layout_toRightOf="@+id/TextView2"
    android:text="@string/dummy"
    android:textColor="@color/blue" />
</RelativeLayout>